fixed some spacing on resume

--- a/src/styles/resume.styl
+++ b/src/styles/resume.styl
@@ -38,11 +38,13 @@
             .category-row-title
                 margin .7rem 0
 
-            .category-title
+            .category-title, .category-subtitle
                 display inline
+                margin-top 10px
+                margin-bottom 5px
 
-            .category-subtitle
-                display inline
+            .category-bullets
+                margin-top 5px
 
             p, li
                 font-size smaller
